--- a/package.json
+++ b/package.json
@@ -21,8 +21,6 @@
     "@slack/bolt": "^3.11.1",
     "aws-lambda": "^1.0.7",
     "dotenv": "^16.0.1",
-    "serverless-dynamodb-local": "^0.2.40",
-    "serverless-offline": "^8.8.0",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
@@ -42,6 +40,9 @@
     "npm-run-all": "^4.1.5",
     "prettier": "^2.6.0",
     "rimraf": "^3.0.2",
+    "serverless": "^3.19.0",
+    "serverless-dynamodb-local": "^0.2.40",
+    "serverless-offline": "^8.8.0",
     "serverless-plugin-typescript": "^2.1.2",
     "ts-node": "^10.8.0",
     "typescript": "^4.6.4"
