--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "ngrok": "npx ngrok http 3000",
     "clean": "rimraf dist/*",
+    "build": "serverless package",
     "dev": "serverless offline start",
     "db:migrate": "serverless dynamodb migrate",
     "start": "npm-run-all clean dev",
