Add deploy prod

--- a/.github/workflows/lint_build.yml
+++ b/.github/workflows/lint_build.yml
@@ -1,8 +1,9 @@
-name: Lint and Build
+name: Deploy Prod environment
 
 on:
   push:
-  pull_request:
+    branches:
+      - main
 
 jobs:
   build:
@@ -27,6 +28,6 @@ jobs:
       - name: Build
         run: npm run build
         env:
-          CLIENT_SIGNING_SECRET: DUMMY_CLIENT_SIGNING_SECRET
-          BOT_TOKEN: DUMMY_BOT_TOKEN
+          CLIENT_SIGNING_SECRET: ${{ secrets.CLIENT_SIGNING_SECRET }}
+          BOT_TOKEN: ${{ secrets.BOT_TOKEN }}
 
