--- a/serverless.yml
+++ b/serverless.yml
@@ -29,6 +29,9 @@ provider:
   name: aws
   runtime: nodejs14.x
   region: eu-west-1
+  tags:
+    TTL: 2025-12-31
+    Project: Polly-Slack-Bot
   iam:
     role:
       statements:
@@ -85,6 +88,9 @@ resources:
             KeyType: HASH
         BillingMode: PAY_PER_REQUEST
         TableName: ${self:provider.environment.DYNAMODB_TABLE}
+        Tags: 
+          - TTL: 2025-12-31
+          - Project: Polly-Slack-Bot
     SchedulesDynamoDbTable:
       Type: 'AWS::DynamoDB::Table'
       DeletionPolicy: Retain
@@ -97,6 +103,9 @@ resources:
             KeyType: HASH
         BillingMode: PAY_PER_REQUEST
         TableName: ${self:provider.environment.DYNAMODB_TABLE}-schedules
+        Tags: 
+          - TTL: 2025-12-31
+          - Project: Polly-Slack-Bot
     VotesDynamoDbTable:
       Type: 'AWS::DynamoDB::Table'
       DeletionPolicy: Retain
@@ -118,3 +127,6 @@ resources:
             Projection:
               ProjectionType: ALL
         TableName: ${self:provider.environment.DYNAMODB_TABLE}-votes
+        Tags: 
+          - TTL: 2025-12-31
+          - Project: Polly-Slack-Bot
